Add icon and update screenshot references
Added icon.png and updated project files to include it as the extension icon. Moved screenshot.png to the root directory and updated references in README and manifest to reflect the new location. Ensured both icon and screenshot are included in VSIX packaging.

--- a/purple-theme.csproj
+++ b/purple-theme.csproj
@@ -59,7 +59,15 @@
     <PackageReference Include="Microsoft.VisualStudio.VsixColorCompiler" Version="17.0.31709.430" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="license.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="screenshot.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
